--- a/TimeTracker/TimeTracker.Client/Shared/NavMenu.cshtml
+++ b/TimeTracker/TimeTracker.Client/Shared/NavMenu.cshtml
@@ -1,33 +1,57 @@
-﻿<div class="main-nav">
-    <div class="navbar navbar-inverse">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">TimeTracker</a>
-        </div>
-        <div class="clearfix"></div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <NavLink href="/" Match=NavLinkMatch.All>
-                        <span class="glyphicon glyphicon-home"></span> Home
-                    </NavLink>
+﻿@using TimeTracker.Client.Services
+@inject UserState userState
+
+
+
+   <nav class="navbar navbar-expand-lg navbar-light bg-faded">
+        <a class="navbar-brand" href="#">Time Tracker</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbarNavDropdown" class="navbar-collapse collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li>
-                    <NavLink href="/counter">
-                        <span class="glyphicon glyphicon-education"></span> Counter
-                    </NavLink>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
                 </li>
-                <li>
-                    <NavLink href="/fetchdata">
-                        <span class="glyphicon glyphicon-th-list"></span> Fetch data
-                    </NavLink>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
                 </li>
             </ul>
+            <ul class="navbar-nav">
+                @if (!userState.LoggedIn)
+                {
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                    <a class="nav-link">Welcome @userState.User.Name!</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" onclick="@Logout">Logout</a>
+                </li>
+                }
+            </ul>
         </div>
-    </div>
-</div>
+    </nav>
+
+    @functions {
+
+    private void Logout()
+    {
+        userState.Logout();
+    }
+
+    protected override void OnInit()
+    {
+        userState.OnChange += StateHasChanged;
+    }
+    }
