--- a/TimeTracker/TimeTracker.Client/_ViewImports.cshtml
+++ b/TimeTracker/TimeTracker.Client/_ViewImports.cshtml
@@ -3,5 +3,5 @@
 @using Microsoft.AspNetCore.Blazor.Components
 @using Microsoft.AspNetCore.Blazor.Layouts
 @using Microsoft.AspNetCore.Blazor.Routing
-@using TimeTracker.Client
+@using TimeTracker.Client.Services
 @using TimeTracker.Client.Shared
