--- a/TimeTracker/TimeTracker.Client/Pages/Index.cshtml
+++ b/TimeTracker/TimeTracker.Client/Pages/Index.cshtml
@@ -1,7 +1,24 @@
-﻿@page "/"
+﻿@page "/app"
+@using TimeTracker.Client.Services
+@inject AppState appState
 
-<h1>Hello, world!</h1>
+@if (appState.LoggedIn)
+{
+    <NavMenu state=appState/>
+    <ProjectList State=appState Projects=appState.ActiveProjects/>
+    <AddProject OnCreate=appState.CreateProject UserId=appState.User.Id/>
+}
+else
+{
+    <NavMenu state=appState/>
+    <h2>Please log in</h2>
+    <a href="/login">Login</a>
+}
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+@functions 
+{      
+    protected override async Task OnInitAsync()
+    {
+        appState.OnChange += StateHasChanged;
+    }
+}
