--- a/TimeTracker/TimeTracker.Client/Pages/Login.cshtml
+++ b/TimeTracker/TimeTracker.Client/Pages/Login.cshtml
@@ -87,7 +87,7 @@
         }
         if (!appState.LoggedIn)
         {
-            LoginFunc(new LoginModel(Username, Password));
+            LoginFunc(new LoginModel(Username, Password)).RunSynchronously();
         }
         if(appState.LoggedIn)
         {
